add client openai and anthropic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "test_llm"
+name = "llm_library"
 version = "0.1.0"
 description = ""
 authors = ["Gab25 <gabrielesorci.25@gmail.com>"]
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.test.dependencies]
