--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: "3.12"
     - name: Install dependencies
       run: |
+        pip install poetry
         poetry install --with test
     - name: Test with pytest
       run: |
