--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,4 @@ jobs:
         poetry install --with test
     - name: Test with pytest
       run: |
-        poetry run pytest ./tests
+        poetry run pytest ./tests -v
